package com.example.anomalydetection.Alerting;

public interface AlertObserver {
    void update(Alert alert);
}